[package]
name = "elgamal_bn"
version = "0.1.0"
authors = ["iquerejeta <querejeta.inigo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = { version = "0.5.1", default-features = false }
rand = {version = "0.5", default-features = true}
rustc-serialize = { version = "0.3"}
sha2 = "0.8.0"
clear_on_drop = { version = "0.2" }
bn = {git = "https://github.com/paritytech/bn"}
rustc-hex = { version = "2", default-features = false }
thiserror = { version = "1", optional = true }

[dependencies.bincode]
version = "0.6"
default-features = false
features = ["rustc-serialize"]

[dev-dependencies]
criterion = "0.2"
